assets/css/styles.scss
/* ... */
ul.bright.contentbox {
    list-style-type: none;
    list-style-position: outside;
    padding-top: 3.5rem;
    line-height: 1.5em;
    word-spacing: 0.25rem;
    display: inline-block;
}

h2.contentbox,h3.contentbox,h4.contentbox {
    padding: 5rem 5px 0 5px;
    text-align: center;
}

p.contentbox {
    padding: 0 2vw; //2% of the viewers width;
    padding-top: 3rem;
    text-align: center;
    line-height: 3em;
    word-spacing: 0.25rem;
}


// hiding the small device responsive sections

#section_two_resp {
    display:none;
}

#section_three_resp {
    display:none;
}

#section_four_resp {
    display:none;
}

/* _______ This is the footer section ________ */

footer {
    clear: both;
    height: 60px;
    padding: 40px 0 0 0;
    border-top: 1px solid black;
    background-color: $footercolor;
    color: #ffffff;
    font-weight: 300;
    font-size: 0.80em;
    width:100%;
    left:0;
    position:absolute;
    bottom:0;
    display:block;
    text-align: center;
    //this next code is from a box shadow generator at https://www.cssmatic.com/box-shadow
    -webkit-box-shadow: 0px -8px 5px -1px rgba(0,0,0,0.16);
    -moz-box-shadow: 0px -8px 5px -1px rgba(0,0,0,0.16);
    box-shadow: 0px -8px 5px -1px rgba(0,0,0,0.16);
    overflow:hidden;
    box-sizing: border-box;
}

footer  a{
    color: $bright;
    text-decoration-line: underline;
    }

footer a:hover {
    color: $darkteal;
    text-decoration-line: none;
    }

/* Contact us section */


/* ____________ This is the responsive media query section ____________ */

/* Extra large devices */
@media (min-width: 1200px) and (max-width: 1920px) { 
    .container {
        width:100%;
        max-width: 1920px;
    }
    .hero_image1 {
        background: url(../images/hero-image1.jpg);
        @include hero-large();
    }
    
    .hero_image2 {
        background: url(../images/hero-image2.jpg);
        @include hero-large();
    }
    
    .hero_image3 {
         background: url(../images/hero-image3.jpg);
        @include hero-large();
    }
    
    .hero_image4 {
        background: url(../images/hero-image4.jpg);
        @include hero-large();
    }
    
    .hero_image5 {
        background: url(../images/hero-image5.jpg);
        @include hero-large();
    }
 }

 /* Large devices */
@media (min-width:992px) and (max-width: 1200px) {    

    .container {
        width:100%;
        max-width: 1200px;
    }
     
    .hero_image1 {
        background: url(../images/hero-image1.jpg);
        @include hero-large();
    }

    .hero_image2 {
        background: url(../images/hero-image2.jpg);
        @include hero-large();
    }

    .hero_image3 {
        background: url(../images/hero-image3.jpg);
        @include hero-large();
    }

    .hero_image4 {
        background: url(../images/hero-image4.jpg);
        @include hero-large();
    }

    .hero_image5 {
        background: url(../images/hero-image5.jpg);
        @include hero-large();
    }

    p {
        font-size: 1rem;
    }
 }

/* Medium devices */
@media (min-width: 800px) and (max-width: 991px) { 

    .menu div {
        text-align: right;
        float: none!important;
        clear:both;
        }

    nav {
        min-width: 70px;
        width: 100%;
        right: 0;
        vertical-align: bottom;
        text-align: right;
        align-items: baseline;
        height: 21px;
        position: absolute;
        bottom: 0px;
        display: inline-block;
        font-size: 14pt;
        padding: 21px;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    .entry-title h1 {
        font-size: 1.5rem;
    }

    .container {
        width:100%;
        max-width: 991px;
    }

    .hero_image1 {
        background: url(../images/hero-image1.jpg);
        @include hero-medium();
    }
    
    .hero_image2 {
        background: url(../images/hero-image2.jpg);
        @include hero-medium();
    }
    
    .hero_image3 {
        background: url(../images/hero-image3.jpg);
        @include hero-medium();
    }
    
    .hero_image4 {
        background: url(../images/hero-image4.jpg);
        @include hero-medium();
    }
    
    .hero_image5 {
        background: url(../images/hero-image5.jpg);
        @include hero-medium();
    }

    #hero-text-position {
        vertical-align: bottom;
        padding-bottom: 20px;
        padding-top: 90px;
        max-width: 85%;
    }
    .hero-title h1 {
        color: $darkblue;
        font-size: 1.8rem;
        font-family: Gill Sans;
        font-style: italic;
        padding: 25px 15px 15px 50px;
        margin: 20px;     
        //this next code is modified by myself here but originally taken from a text shadow generator at https://html-css-js.com/css/generator/text-shadow/
        text-shadow: 1px 1px 0px #ffffff, -1px -1px 0px #ffffff;
    }

    h2.contentbox, h3.contentbox, h4.contentbox {
        padding: 5rem 5px 0 5px!important;
        text-align: center;
    }
    p.contentbox {
        padding: 0 2vw;
        padding-top: 0rem!important;
        text-align: center;
        line-height: 3em;
        word-spacing: 0.25rem;
    }

 }
/* ... */

